# botduk

./: .gitignore  README.md  community_benchmark.py  main.py  main_with_no_framework.py  pyproject.toml  requirements.txt
.github/workflows/: run_bot_on_Tournamens  run_bot_on_Tournamens.yaml  run_bot_on_tournament.yaml  test_bot.yaml
