[tool.poetry]
name = "duke-bot-template"
version = "0.1.0"
description = "forecasting bots for the Metaculus platform."
authors = ["Emmanuel <translyinc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"
mixpanel = "^4.10.0"
tavily-python = "^0.3.3"
newsapi-python = "^0.2.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
